--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
+asn1crypto==1.3.0
 certifi==2019.11.28
+cffi==1.14.0
+chardet==3.0.4
 Click==7.0
+cryptography==2.8
 Flask==1.1.1
+Flask-Cors==3.0.8
 gunicorn==20.0.4
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 mongoengine==0.19.1
+pycparser==2.20
 pymongo==3.9.0
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+requests==2.23.0
 six==1.14.0
+urllib3==1.25.8
 Werkzeug==1.0.0
+win-inet-pton==1.1.0
 wincertstore==0.2
